src/snapshots/tat__tat__test__render_main_menu-6.snap
---
source: src/tat.rs
expression: terminal.backend()
---
"                                      Terminal Attribute Table                                      "
"                                                                                                    "
"╭ Dataset ──────────────────────────── <type ? to show help> ──────────────────────────────────────╮"
"│- URI: "./testdata/basic.gpkg"                                                                    │"
"│- Driver: GeoPackage (GPKG)                                                                       │"
"│                                                                                                  │"
"│ Layers ─────┬ Layer Information ────────┬ Preview Table ─────────────────────────────────────────┤"
"│point        │- Name: line               │          │                                             │"
"│line         │- CRS: EPSG:4326 (WGS 84)  │Feature   │geom                                         │"
"│polygon      │- Feature Count: 3         │1         │MULTILINESTRING ((1 0,1 1,0 1,…              │"
"│multipolygon │- Geometry fields:         │2         │MULTILINESTRING ((2 0,2 -1,1 -…              │"
"│nogeom       │    "geom" - (Multi Line St│3         │MULTILINESTRING ((-3 2,-3 1,-2…              │"
"│             │- Fields (1):              │          │                                             │"
"│             │    "field" - (Integer)    │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │◄████████████████═════════►│          │                                             │"
"╰─────────────┴───────────────────────────┴────────────── <Enter> to open full table ──────────────╯"
