src/snapshots/tat__tat__test__render_main_menu-7.snap
---
source: src/tat.rs
expression: terminal.backend()
---
"                                      Terminal Attribute Table                                      "
"                                                                                                    "
"╭ Dataset ──────────────────────────── <type ? to show help> ──────────────────────────────────────╮"
"│- URI: "./testdata/basic.gpkg"                                                                    │"
"│- Driver: GeoPackage (GPKG)                                                                       │"
"│                                                                                                  │"
"│ Layers ─────┬ Layer Information ────────┬ Preview Table ─────────────────────────────────────────┤"
"│point        │- Name: polygon            │          │                                             │"
"│line         │- CRS: EPSG:3067 (ETRS89 / │Feature   │geom                                         │"
"│polygon      │- Feature Count: 2         │1         │POLYGON ((-9 3,-9 1,-7 1,-7 3,…              │"
"│multipolygon │- Geometry fields:         │2         │POLYGON ((-5 6,-5 3,-2 3,-2 6,…              │"
"│nogeom       │    "geom" - (Polygon, EPSG│          │                                             │"
"│             │- Fields (1):              │          │                                             │"
"│             │    "field" - (Integer)    │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │◄█████████████████════════►│          │                                             │"
"╰─────────────┴───────────────────────────┴────────────── <Enter> to open full table ──────────────╯"
